Bug 162264 - Crash when pressing "select outline format" on sidebar
Summary: Crash when pressing "select outline format" on sidebar
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium critical
Assignee: Patrick (volunteer)
URL:
Whiteboard: target:25.2.0 target:24.8.0.3
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks: Sidebar-Properties-Paragraph Crash
  Show dependency treegraph
 
Reported: 2024-07-30 11:00 UTC by Faisal
Modified: 2024-08-08 22:04 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Crash log (107.84 KB, text/plain)
2024-07-30 19:57 UTC, Patrick (volunteer)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Faisal 2024-07-30 11:00:47 UTC
Description:
LO crashes after pressing "select outline format" on sidebar

Steps to Reproduce:
1. Open Writer
2. Enable sidebar
3. Press "Select Outline Format" (not the drop-down arrow next to it)

Actual Results:
Application crashes.

Expected Results:
No crash.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 25.2.0.0.alpha0+ (AARCH64) / LibreOffice Community
Build ID: d671bceed0ba7195eae1e063d4a363074f8483a0
CPU threads: 12; OS: macOS 14.6; UI render: Skia/Metal; VCL: osx
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Patrick (volunteer) 2024-07-30 19:57:03 UTC
Created attachment 195613 [details]
Crash log

I can reproduce the crash in my local master build as well. Attached is a crash log. Looks like a null pointer somewhere.
Comment 2 Patrick (volunteer) 2024-07-30 20:22:39 UTC
I have submitted the following patch that stops the crashing and displays the outline dialog:

https://gerrit.libreoffice.org/c/core/+/171250

Just waiting for the original developer to review my modifications to their code.
Comment 3 stragu 2024-07-31 11:07:50 UTC
Reproduced on Linux too:

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 233af54afb6e493c3538efe7c93d0f53f1b4c3ab
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

Bibisected with linux-64-24.8 repo to first bad build [d252ba026e567bbe8a62544c2adad0026f56717d] which is:

commit c8a5dc46d11f2ef1e3a66d633730d9a700ced24a
author	Samuel Mehrbrodt 	Mon May 06 09:20:58 2024 +0200
committer	Samuel Mehrbrodt 	Thu May 16 09:17:09 2024 +0200
tdf#161056 Show bullets used in document in bullets dropdown
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/167186
Comment 4 Commit Notification 2024-08-02 00:01:39 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3ee53d75d253fb7fe2eb8db44afca95fda7f156d

tdf#162264 check if rReq.GetArgs() is a nullptr

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Patrick (volunteer) 2024-08-02 00:14:45 UTC
I have committed a fix this bug. The fix should be in tomorrow's (02 August 2024) nightly master builds:

https://dev-builds.libreoffice.org/daily/master/current.html

Note for macOS testers: the nightly master build installer does not overwrite any LibreOffice official versions. Instead, it will be installed as a separate application called "LibreOfficeDev" in the /Applications folder.

Because this is a "test" build, you will need to do the following steps before you launch the LibreOfficeDev application:

1. Go to the Finder and navigate to the /Applications/Utilities folder
2. Launch the "Terminal" application
3. Paste the following command in the Terminal application window and press the Return key to execute the command:

   xattr -d com.apple.quarantine /Applications/LibreOfficeDev.app
Comment 6 Commit Notification 2024-08-08 04:53:29 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/04de53f3fad4cf2bb653a64e0a18b66bd64568ac

tdf#162264 check if rReq.GetArgs() is a nullptr

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-08-08 14:06:40 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-24-8-0":

https://git.libreoffice.org/core/commit/b2bf0aa6db254d82bf55f7c78cb0610bdbe91276

tdf#162264 check if rReq.GetArgs() is a nullptr

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.