tdf#162264 check if rReq.GetArgs() is a nullptr

Change-Id: I04d613cf5f2b8ee672334bafd59c460fd9028320
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171250
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
Tested-by: Jenkins
(cherry picked from commit 3ee53d75d253fb7fe2eb8db44afca95fda7f156d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171360
Tested-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>